Tue Dec 14 11:07:19 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/Makefile.am src/odbc/unittests/compute.c:
	- finished test (not working)

Tue Dec 14 09:36:25 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/bsqldb.c: remove a warning

Mon Dec 13 19:28:34 EST 2004	Brian Bruns <brian@bruns.com>
	* src/pool/pool.h: add reference to assign member to TDS_POOL_USER
	* src/pool/main.c: comment out debug message
	* src/pool/member.c:
	* src/pool/user.c: fix cleanup routines on read/write error

Mon Dec 13 20:21:32 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/pool/config.c src/pool/member.c src/pool/pool.h:
	* src/pool/stream.c src/pool/user.c:
	- update comment style
	- small fixes
	* src/tds/convert.c:
	- give compile one more change to optimize

Mon Dec 13 20:12:25 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/replacements/readpassphrase.c(added):
	* src/replacements/readpassphrase.h(added):
	- replacements for readpassphrase
	* configure.in include/replacements.h src/apps/tsql.c:
	- use readpassphrase instead of getpass

Mon Dec 13 14:20:14 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/rpc.c: merged with trunk 0.63
	* include/tds.h src/tds/util.c:
	- improve logging (not finished)

Mon Dec 13 11:57:44 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4 autogen.sh configure.in misc/test-dist.sh:
	* src/apps/Makefile.am src/ctlib/Makefile.am:
	* src/dblib/Makefile.am src/odbc/Makefile.am:
	* src/server/Makefile.am src/tds/Makefile.am:
	- imported changes from 0.63 trunk

Sun Dec 12 10:07:06 EST 2004	Brian Bruns <brian@bruns.com>
	* src/pool/main.c: setsockopt to SO_REUSEADDR
	* src/pool/member.c: use netlib final packet flag instead of done token.
	* src/pool/user.c: reallocate dead users

Sat Dec 11 14:32:31 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/pool/main.c src/pool/member.c src/pool/pool.h:
	* src/pool/user.c:
	- update style
